# Codex-Manager-Dev

./: .dockerignore  .env.example  .gitignore  .tmp-ui-debug.js  .tmp-ui-smoke.js  Cargo.toml  README.md  compose.bench.yml  compose.current.test.yml  compose.test.yml  compose.yml  package-lock.json  package.json
apps/web/: next.config.ts  package.json  tailwind.config.ts  tsconfig.json  tsconfig.tsbuildinfo
apps/web/public/: apple-account-pool.html
docs/: 2.txt  acceptance-report-2026-04-06.md  acceptance-report-2026-04-07-real-env.md  cache-design.md  plan.txt
infra/docker/: browser-assist.Dockerfile  compose.hostnet.override.yml  server.Dockerfile  server.test.Dockerfile  web.Dockerfile
infra/helm/: README.md
infra/helm/codex-manager/: Chart.yaml  values.yaml
scripts/: cluster_smoke.sh  edge_smoke.sh  full_smoke.sh  wsl_docker_bench.sh  wsl_docker_test.sh
services/browser-assist/: package.json  server.mjs
services/server/: Cargo.toml
services/server/migrations/: 0001_init.sql  0002_upstream_credentials.sql  0003_conversation_contexts.sql  0004_gateway_users_and_request_logs.sql  0005_behavior_profiles.sql  0006_conversation_threads.sql  0007_managed_auth_state.sql
services/server/src/: browser_assist.rs  bus.rs  config.rs  main.rs  models.rs  openai_auth.rs  pricing.rs  reasoning.rs  state.rs  storage.rs  upstream.rs
services/server/src/http/: admin.rs  data.rs
services/server/src/scheduler/: cf_state.rs  mod.rs  replay.rs  router.rs  token_optimizer.rs
sh/new/: Dockerfile  install.sh
sh/new/scripts/: container-bootstrap.sh
(+42 files in other folders)
